--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=This library facilitates your usage of LittleFS for the onboard flash.
 category=Data Storage
 url=https://github.com/khoih-prog/LittleFS_Mbed_RP2040
 repository=https://github.com/khoih-prog/LittleFS_Mbed_RP2040
-architectures=mbed,mbed_rp2040,ArduinoCore-mbed
+architectures=mbed,mbed_rp2040,ArduinoCore-mbed,mbed_nano
 
